maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:2: error: identifier expected but 'override' found.
def override run() {
    ^Escaper:25: error: Unmatched closing brace '}' ignored here
}
^